data/derived/comb/progs/unify/prog8912.ml.out
Characters 57-63:
  in helper
     ^^^^^^
Error: This expression has type 'a -> 'a
       but an expression was expected of type 'a -> 'a * bool
       The type variable 'a occurs inside 'a * bool
